src/app/css/styles.css
/* Palette */
:root {
	--color-primary: #487779;
	--color-secondary: #024883;
	--color-red: rgb(113 2 2);
	--color-B: rgb(2, 45, 49);
	--color-W: #rgb(248, 252, 252);
	--color-gold: #8c7f46;
	--color-light-grey: rgb(219, 235, 235);
	--color-grey: rgb(102, 124, 124);
}

/* Globals */
html {
	box-sizing: border-box;
}

* {
	box-sizing: inherit;
	margin: 0;
	padding: 0;

	&::before,
	&::after {
		box-sizing: inherit;
	}
}

body {
	/* overflow-y: scroll; */
	/* scrollbar-gutter: stable; */
	width: 100vw;
	/* vs. scrollbar-y gutter */
}

:is(ul, ol) {
	list-style: none;
}

[href] {
	color: var(--color-B);
	text-decoration: none;

	&:hover {
		color: var(--color-red);
	}

	&:active {
		color: var(--color-secondary);
	}
}

.active {
	color: var(--color-red);
}

/* Navigation */
nav {
	user-select: none;

	> ol {
		font-size: smaller;

		@media screen and (min-width: 810px) {
			font-size: medium;
		}

		@media screen and (min-width: 1920px) {
			font-size: large;
		}

		@media screen and (min-width: 3840px) {
			font-size: x-large;
		}
	}
}

main:where(.article, .about, .references) [href] {
	text-decoration: underline;
	user-select: text;
	color: var(--color-red);

	&:hover {
		color: var(--color-secondary);
	}
}

/* Layout - mobile first (iPad max-width) */
:where(header > div, body > nav, main) {
	margin: 0 auto;
	max-width: 810px;

	/* @media only screen and (min-width: 1920px) {
		max-width: 810px;
		width: 1080px;
	} */
	/* @media only screen and (min-width: 1920px) {
		max-width: 1080px;
	} */
	@media only screen and (min-width: 2560px) {
		max-width: 1920px;
	}
}

:is(h1, h2) {
	margin-bottom: 1rem;
}

header > div {
	display: flex;
	align-items: center;

	img {
		padding: 0.5rem 0.8rem;
	}
}

main {
	margin-bottom: 3rem;
	/* padding-left: 1rem;
	padding-right: 1rem; */
	outline: 1px solid red;
}

@media only screen and (min-width: 1920px) {
	main.categories > h1 {
		margin-bottom: 2rem;
	}

	main.references > h1 {
		margin-bottom: 3rem;
	}
}

footer {
	width: 100vw;
	position: fixed;
	bottom: -1px;
	z-index: 2;
	text-align: center;
	font-size: small;
	padding: 0.25rem 0;
}

p:has(abbr) {
	color: var(--color-grey);
	display: block;
	text-align: center;
	font-size: x-small;

	@media screen and (min-width: 810px) {
		font-size: small;
	}

	@media only screen and (min-width: 1920px) {
		font-size: medium;
	}

	@media only screen and (min-width: 2560px) {
		font-size: large;
	}
}

.columns-md {
	@media screen and (min-width: 810px) {
		gap: 1.5rem;
		display: flex;

		& > div {
			flex: 1;
		}

		/* First element of left div is h2; First of right div is p or figure -> add margin-top to p */
		> div:nth-child(1):has(h2:nth-child(1)) + div:has(p:nth-child(1)) > p:first-child,
		> div:nth-child(1):has(h2:nth-child(1)) + div:has(figure:nth-child(1)) > figure:first-child {
			margin-top: 4rem;
		}

		/* First element of left div is p; First of right div is h2 -> remove margin-top to h2 */
		> div:nth-child(1):has(p:nth-child(1)) + div:has(h2:nth-child(1)) > h2:first-child {
			margin-top: 0;
		}
	}

	@media screen and (min-width: 1920px) {
		font-size: 3.5rem;

		/* First element of left div is h2; First of right div is p -> add margin-top to p */
		> div:nth-child(1):has(h2:nth-child(1)) + div:has(p:nth-child(1)) > p:first-child,
		> div:nth-child(1):has(h2:nth-child(1)) + div:has(figure:nth-child(1)) > figure:first-child {
			margin-top: 5rem;
		}
	}

	@media screen and (min-width: 3840px) {
		font-size: 4rem;

		/* First element of left div is h2; First of right div is p -> add margin-top to p */
		> div:nth-child(1):has(h2:nth-child(1)) + div:has(p:nth-child(1)) > p:first-child,
		> div:nth-child(1):has(h2:nth-child(1)) + div:has(figure:nth-child(1)) > figure:first-child {
			margin-top: 7rem;
		}
	}
}

h1,
h2,
h3 {
	margin-top: 1rem;
}

main.categories > nav h2 {
	margin-top: 1rem;
}

/* Typography */
body {
	font-family: Helvetica, Arial, sans-serif;
	margin: 0;
}

/* Text */
header {
	font-size: x-large;

	span {
		@media screen and (min-width: 810px) {
			font-size: 3rem;
		}

		@media screen and (min-width: 1920px) {
			font-size: 3.5rem;
		}

		@media screen and (min-width: 3840px) {
			font-size: 4rem;
		}
	}
}

h1 {
	font-family: Georgia, "Times New Roman", Times, serif;
	letter-spacing: 1.5;
	margin-bottom: 1.5rem;
	font-size: medium;
	text-transform: uppercase;

	@media screen and (min-width: 810px) {
		font-size: x-large;
	}

	@media screen and (min-width: 1920px) {
		font-size: xx-large;
	}

	@media screen and (min-width: 3840px) {
		font-size: 3rem;
	}
}

h2 {
	letter-spacing: -0.5;
	font-weight: lighter;
	font-size: medium;

	@media screen and (min-width: 810px) {
		font-size: x-large;
	}

	@media screen and (min-width: 1920px) {
		font-size: xx-large;
	}

	@media screen and (min-width: 3840px) {
		font-size: 3rem;
	}
}

blockquote > .inner-blockquote,
blockquote:has(.inner-blockquote) + p {
	font-size: medium;

	@media screen and (min-width: 810px) {
		font-size: large;
	}

	@media screen and (min-width: 1920px) {
		font-size: x-large;
	}

	@media screen and (min-width: 3840px) {
		font-size: xx-large;
	}
}

.route-list,
.route-link {
	font-size: small;
	line-height: 1.5;
}

@media screen and (min-width: 1920px) {

	.route-list,
	.route-link {
		font-size: medium;
	}
}

@media screen and (min-width: 3840px) {

	.route-list,
	.route-link {
		font-size: x-large;
	}
}

article ul,
p:not(.inner-blockquote),
p:not(blockquote + p) {
	font-size: small;
	line-height: 1.5;
	margin-top: 0;

	@media screen and (min-width: 1920px) {
		font-size: medium;
	}

	@media screen and (min-width: 3840px) {
		font-size: x-large;
	}
}
/* ... */

